# occupancy-scraper

./: .gitignore  README.md  config.py  db_utils.py  eda.ipynb  entity_types.py  ewa_rooms.json  models.py  new_rooms_ewa.json  pyproject.toml  requirements.txt  scrap.ipynb  scrap2.ipynb  settings.py  update_courses.ipynb  update_courses.py  update_man.ipynb  update_meetings.ipynb  update_schedules.ipynb  update_schedules.py  utils.py  utils2.py
.github/workflows/: precommit.yml  update_courses.yml  update_schedules copy.yml  update_schedules.yml
